# ecs

./: .gitignore  .gitmodules  Makefile  meson.build
src/: components.h  entity_manager.cpp  game.cpp  game.h  main.cpp  vec2.cpp
